production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporal-cloud
  labels:
    app.kubernetes.io/name: temporal-cloud
